fix: hide overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,8 @@ canvas[resize] {
 }
 .canvas-container {
   width: 100%;
-  height: 99vh;
+  height: 100%;
+  overflow: hidden;
 }
 
 main {
